Implemented code review suggestions